Implement role based. Create separate controller for admin and user. Create custom exception